force-app/main/default/objects/Case/fields/Asuntos__c.field-meta.xml
<CustomField>
    <fullName>Asuntos__c</fullName>
    <label>Asunto</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Atención al cliente</fullName>
            </value>
            <value>
                <fullName>Cumplimiento de acuerdos y solicitudes</fullName>
            </value>
            <value>
                <fullName>Información suministrada</fullName>
            </value>
            <value>
                <fullName>Manejo de datos personales</fullName>
            </value>
            <value>
                <fullName>Manejo ético</fullName>
            </value>
            <value>
                <fullName>Proceso de compra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>