force-app/main/default/objects/Case/fields/Campo_de_Prueba2__c.field-meta.xml
<CustomField>
    <fullName>Campo_de_Prueba2__c</fullName>
    <label>Campo de Prueba2</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>