force-app/main/default/objects/Case/fields/Campo_de_Prueba__c.field-meta.xml
<CustomField>
    <fullName>Campo_de_Prueba__c</fullName>
    <label>Campo de Prueba</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>