force-app/main/default/objects/Case/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ciudad</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Ciudades__c.EsMunicipio__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Ciudades__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>