force-app/main/default/objects/Case/fields/CiudadWeb__c.field-meta.xml
<CustomField>
    <fullName>CiudadWeb__c</fullName>
    <label>Ciudad</label>
    <length>100</length>
    <type>Text</type>
</CustomField>