force-app/main/default/objects/Case/fields/Compania__c.field-meta.xml
<CustomField>
    <fullName>Compania__c</fullName>
    <label>Compañía</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global Seguros</fullName>
            </value>
            <value>
                <fullName>Global Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>