force-app/main/default/objects/Case/fields/Correo_electronico_jefe__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico_jefe__c</fullName>
    <label>Correo electronico jefe</label>
    <type>Email</type>
</CustomField>