force-app/main/default/objects/Case/fields/CorreoElectronicoGE__c.field-meta.xml
<CustomField>
    <fullName>CorreoElectronicoGE__c</fullName>
    <label>Correo electrónico GE</label>
    <type>Email</type>
</CustomField>