force-app/main/default/objects/Case/fields/D_as_de_resoluci_n__c.field-meta.xml
<CustomField>
    <fullName>D_as_de_resoluci_n__c</fullName>
    <formula>(ClosedDate  -  CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días de resolución</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>