force-app/main/default/objects/Case/fields/Divisi_n__c.field-meta.xml
<CustomField>
    <fullName>Divisi_n__c</fullName>
    <formula>Owner:User.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>División</label>
    <type>Text</type>
</CustomField>