force-app/main/default/objects/Case/fields/estadoSemaforo__c.field-meta.xml
<CustomField>
    <fullName>estadoSemaforo__c</fullName>
    <description>almacena el estado del semáforo conforme al proceso de medición de la semaforización. Los valores son(Verde, Amarillo, Rojo y Morado)</description>
    <label>estadoSemaforo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verde</fullName>
                <default>true</default>
                <label>Verde</label>
            </value>
            <value>
                <fullName>Amarillo</fullName>
            </value>
            <value>
                <fullName>Rojo</fullName>
            </value>
            <value>
                <fullName>Morado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>