force-app/main/default/objects/Case/fields/FechaHoraRecibido__c.field-meta.xml
<CustomField>
    <fullName>FechaHoraRecibido__c</fullName>
    <label>Fecha y hora de recibido</label>
    <type>DateTime</type>
</CustomField>