force-app/main/default/objects/Case/fields/imagenSemaforo__c.field-meta.xml
<CustomField>
    <fullName>imagenSemaforo__c</fullName>
    <formula>IF(ISPICKVAL(estadoSemaforo__c,&quot;Verde&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015G0000001irhX&quot;, &quot;Verde&quot;), 
IF(ISPICKVAL(estadoSemaforo__c,&quot;Amarillo&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015G0000001irha&quot;, &quot;Amarillo&quot;), 
IF(ISPICKVAL(estadoSemaforo__c,&quot;Rojo&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015G0000001irhZ&quot;, &quot;Rojo&quot;), 
IF(ISPICKVAL(estadoSemaforo__c,&quot;Morado&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015G0000001irhY&quot;, &quot;Morado&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=015110000009Hp7&quot;, &quot;Verde&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semáforo</label>
    <type>Text</type>
</CustomField>