force-app/main/default/objects/Case/fields/Mensaje_cierre_de_caso__c.field-meta.xml
<CustomField>
    <fullName>Mensaje_cierre_de_caso__c</fullName>
    <description>Se  utiliza en el desarrollo de cierre de caso</description>
    <label>Mensaje cierre de caso</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>