force-app/main/default/objects/Case/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Asuntos__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6-Mal trato por parte de un funcionario</fullName>
            </value>
            <value>
                <fullName>7-Mal trato por parte del asesor comercial</fullName>
            </value>
            <value>
                <fullName>26-Obstáculo para la interposición de quejas, reclamos o peticiones</fullName>
            </value>
            <value>
                <fullName>27-Demora en la respuesta a quejas, reclamos o peticiones</fullName>
            </value>
            <value>
                <fullName>28-Errores en la resolución de quejas, reclamos o peticiones.</fullName>
            </value>
            <value>
                <fullName>29-No resolución a quejas, peticiones y reclamos</fullName>
            </value>
            <value>
                <fullName>5-Dificultad en la comunicación con la entidad</fullName>
            </value>
            <value>
                <fullName>12-Demora o no entrega de la cotización</fullName>
            </value>
            <value>
                <fullName>105-Demora o no realización de modificación de financiación de póliza</fullName>
            </value>
            <value>
                <fullName>106-Error en modificación de financiación de póliza</fullName>
            </value>
            <value>
                <fullName>1-Publicidad engañosa</fullName>
            </value>
            <value>
                <fullName>2-Dificultad en el acceso a la información</fullName>
            </value>
            <value>
                <fullName>3-Información incompleta o errada</fullName>
            </value>
            <value>
                <fullName>11-Cotización errada</fullName>
            </value>
            <value>
                <fullName>14-Error o falta de claridad en las cláusulas del contrato o de la póliza</fullName>
            </value>
            <value>
                <fullName>16-Vinculación no autorizada</fullName>
            </value>
            <value>
                <fullName>34-Inadecuado tratamiento de datos personales</fullName>
            </value>
            <value>
                <fullName>8-Presunta actuación fraudulenta o no ética del personal</fullName>
            </value>
            <value>
                <fullName>102-Demora en el servicio requerido para emisión de póliza</fullName>
            </value>
            <value>
                <fullName>103-Demora o no entrega de recibo de pago</fullName>
            </value>
            <value>
                <fullName>104-Error en la facturación o cobro no pactado</fullName>
            </value>
            <value>
                <fullName>107-Demora o no confirmación de pago</fullName>
            </value>
            <value>
                <fullName>108-Error en devolución de prima o aporte</fullName>
            </value>
            <value>
                <fullName>109-Demora o no aplicación del recaudo</fullName>
            </value>
            <value>
                <fullName>110-Error en la aplicación del recaudo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>