force-app/main/default/objects/Case/fields/Movil__c.field-meta.xml
<CustomField>
    <fullName>Movil__c</fullName>
    <label>Móvil</label>
    <type>Phone</type>
</CustomField>