force-app/main/default/objects/Case/fields/Nombres__c.field-meta.xml
<CustomField>
    <fullName>Nombres__c</fullName>
    <label>Nombres</label>
    <length>255</length>
    <type>Text</type>
</CustomField>