force-app/main/default/objects/Case/fields/NombrProductoPlan__c.field-meta.xml
<CustomField>
    <fullName>NombrProductoPlan__c</fullName>
    <formula>Poliza__r.ProductoPlan__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre producto o plan</label>
    <type>Text</type>
</CustomField>