force-app/main/default/objects/Case/fields/OtroTipo__c.field-meta.xml
<CustomField>
    <fullName>OtroTipo__c</fullName>
    <label>Otro Tipo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>