force-app/main/default/objects/Case/fields/Poliza__c.field-meta.xml
<CustomField>
    <fullName>Poliza__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Póliza/Plan</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2 OR 3)</booleanFilter>
        <filterItems>
            <field>Poliza__c.Nombre_Tomador__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Poliza__c.NombreBeneficiario__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Poliza__c.NombreDesignado__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Poliza__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>