force-app/main/default/objects/Case/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <label>Producto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>26 - Seguro educativo</fullName>
                <color>#3366FF</color>
                <label>26 - Seguro educativo</label>
            </value>
            <value>
                <fullName>27 - Seguro de vida grupo</fullName>
            </value>
            <value>
                <fullName>30 - Seguro de vida individual</fullName>
            </value>
            <value>
                <fullName>34 - Seguro de pensiones voluntarias</fullName>
            </value>
            <value>
                <fullName>36 - Seguro de rentas voluntarias</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>