force-app/main/default/objects/Case/fields/PropietarioTemporal__c.field-meta.xml
<CustomField>
    <fullName>PropietarioTemporal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Establece si el caso está asignado temporalmente a un usuario BackUp</description>
    <label>PropietarioTemporal</label>
    <type>Checkbox</type>
</CustomField>