force-app/main/default/objects/Case/fields/Respuesta_a_favor__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_a_favor__c</fullName>
    <label>Respuesta a favor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumidor Financiero</fullName>
            </value>
            <value>
                <fullName>Global Seguros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>