force-app/main/default/objects/Case/fields/Respuesta_Global__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_Global__c</fullName>
    <label>Respuesta Global</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Respuesta_a_favor__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aceptada</fullName>
            </value>
            <value>
                <fullName>No Aceptada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>