force-app/main/default/objects/Case/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Producto__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Queja</fullName>
                <default>true</default>
                <label>Queja</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>