force-app/main/default/objects/Case/fields/TipodeConsulta__c.field-meta.xml
<CustomField>
    <fullName>TipodeConsulta__c</fullName>
    <label>Tipo de Consulta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Información Corporativa</fullName>
            </value>
            <value>
                <fullName>Información de Productos</fullName>
            </value>
            <value>
                <fullName>Procedimientos</fullName>
            </value>
            <value>
                <fullName>Beneficios</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>