force-app/main/default/objects/Case/fields/TipoInformes__c.field-meta.xml
<CustomField>
    <fullName>TipoInformes__c</fullName>
    <label>Tipo informes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FELICITACION</fullName>
            </value>
            <value>
                <fullName>PETICION (SOLICITUD)</fullName>
            </value>
            <value>
                <fullName>QUEJA O RECLAMO</fullName>
            </value>
            <value>
                <fullName>SUGERENCIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>