force-app/main/default/objects/Case/recordTypes/Casos.recordType-meta.xml
<RecordType>
    <fullName>Casos</fullName>
    <active>true</active>
    <businessProcess>Soporte</businessProcess>
    <description>Registro de casos Peticiones, Quejas, Reclamo, Sugerencia, Felicitaciones de Global Seguros</description>
    <label>Global Seguros</label>
</RecordType>