force-app/main/default/objects/Case/validationRules/CASO01_Caso_cerrado_no_se_modifica.validationRule-meta.xml
<ValidationRule>
    <fullName>CASO01_Caso_cerrado_no_se_modifica</fullName>
    <active>true</active>
    <description>CASO01 - Cuando el caso esta cerrado no puede ser modificado su Estado</description>
    <errorConditionFormula>AND(NOT(ISNEW()),
ISPICKVAL(  PRIORVALUE(Status),&quot;Resuelta&quot;),$Profile.Name &lt;&gt; &quot;Administrador del sistema 2&quot;
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>En un caso Resuelto no puede ser modificado</errorMessage>
</ValidationRule>