force-app/main/default/objects/Case/validationRules/CASO02_Caso_guardado_no_modifica.validationRule-meta.xml
<ValidationRule>
    <fullName>CASO02_Caso_guardado_no_modifica</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( Description)</errorConditionFormula>
    <errorMessage>CASO02 - Cuando el caso se guarda no puede ser modificado</errorMessage>
</ValidationRule>