force-app/main/default/objects/Case/validationRules/CASO03_No_crear_casos_a_fallecidos.validationRule-meta.xml
<ValidationRule>
    <fullName>CASO03_No_crear_casos_a_fallecidos</fullName>
    <active>true</active>
    <description>El sistema no permite crear casos a  un cliente fallecido</description>
    <errorConditionFormula>NOT(ISBLANK( Account.FechaFallecimiento__c ))</errorConditionFormula>
    <errorMessage>CASO03-El sistema no permite crear casos a  un cliente fallecido</errorMessage>
</ValidationRule>