force-app/main/default/objects/Case/listViews/Mis_Casos_Resueltos.listView-meta.xml
<ListView>
    <fullName>Mis_Casos_Resueltos</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>Asuntos__c</columns>
    <columns>Motivo__c</columns>
    <columns>Ciudad__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>D_as_de_resoluci_n__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Resuelta</value>
    </filters>
    <label>2. Mis Casos Resueltos</label>
</ListView>