force-app/main/default/objects/Case/listViews/Prueba_Case.listView-meta.xml
<ListView>
    <fullName>Prueba_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Prueba</label>
    <queue>Prueba</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>