force-app/main/default/objects/Case/listViews/Todos_los_Casos.listView-meta.xml
<ListView>
    <fullName>Todos_los_Casos</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>Asuntos__c</columns>
    <columns>Motivo__c</columns>
    <columns>Ciudad__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>D_as_de_resoluci_n__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>3. Todos los Casos</label>
</ListView>